[tool.poetry]
name = "quart-docker-pytest"
version = "0.0.0"
description = "Quart Docker Pytest"
authors = ["Vincent Chov <vincentchov@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vincentchov/quart-docker-pytest"
repository = "https://github.com/vincentchov/quart-docker-pytest"
documentation = "https://quart-docker-pytest.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/vincentchov/quart-docker-pytest/releases"

[tool.poetry.dependencies]
python = "^3.7"
click = ">=8.0.1"
quart = {extras = ["dotenv"], version = "^0.18.3"}
httpx = "^0.23.1"
Jinja2 = "^3.1.2"
pyroute2 = "^0.7.3"
dataclasses-json = "^0.5.7"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
pytest-asyncio = "^0.20.3"
sqlfluff = "^1.4.5"

[tool.poetry.scripts]
quart-docker-pytest = "quart_docker_pytest.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["quart_docker_pytest", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
mypy_path = "typings"
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pytest_ini_options]
testpaths = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
